# cowboy-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
models/: lol.gltf  skeleton.gltf
shaders/: bone.frag  skeleton.frag  vert.vert
src/: Bone.h  BoneComponent.h  DrawableComponent.h  GlWidget.cpp  InputManager.cpp  Renderer.cpp  Renderer.h  Scene.h  Shader.h  SkeletonComponent.h  TransformComponent.h  main.cpp  utils.h
src/Components/: Camera.h  Gravity.h  PointLight.h  RigidBody.h  Transform.h
src/Core/: ComponentArray.h  ComponentManager.h  Coordinator.h  Core.cpp  Core.h  EntityManager.h  System.h  SystemManager.h  Window.cpp  Window.h  types.h  utils.h
src/Core/Subsystems/Debugger/: Debugger.cpp  Debugger.h
src/Core/Subsystems/ECS/: ComponentArray.h  ComponentManager.h  ECSManager.h  EntityManager.h  System.h  SystemManager.h
src/Core/Subsystems/Input/: InputManager.cpp  InputManager.h
src/Core/Subsystems/Renderer/: Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererManager.cpp  RendererManager.h  RendererObjects.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  World.cpp  World.h
src/Core/Subsystems/Renderer/Shaders/: frag.frag  vert.vert
src/Core/Subsystems/Renderer/models/: alpha.glb  scene (1).glb  scene (2).glb  scene.glb  scene.gltf
src/Core/Subsystems/Renderer/shaders/: computeFrustum.comp  cullLights.comp  depth.frag  depth.vert  forwardplus.frag  forwardplus.vert  frag.frag  gpass.frag  lightSpheres.frag  pbr.frag  test.frag  test.vert  texture.frag  texture.vert  tiledDeferred.comp  tiledForward.comp  tiledLightCulling.comp  vert.vert
src/Core/Subsystems/Renderer/tempname/: DescriptorPool.h  DescriptorSet.cpp  GraphicsPipeline.cpp  GraphicsPipeline.h  Swapchain.cpp  Swapchain.h
src/Core/Subsystems/Renderer/world/: Mesh.cpp  Mesh.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  World.cpp  World.h
src/Core/Subsystems/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/Systems/: CameraHandler.cpp  CameraHandler.h  Input.cpp  Input.h  Physics.cpp  Physics.h  PointLightsHandler.cpp  PointLightsHandler.h
